# .dotfiles

./: .gitignore  .gitmodules  .ignore  .stow-global-ignore  .stow-local-ignore  .xinitrc  .zshrc  README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix
.config/: screenkey.json
.config/discord/: settings.json
.config/flameshot/: flameshot.ini
.config/ghostty/: config
.config/nix/: configuration.nix  flake.nix  home.nix
.config/nix/hosts/: home.nix
.config/nix/hosts/main/: configuration.nix
.config/nix/modules/: apps.nix  base.nix  qtile.nix  sh.nix  sops.nix
.config/nix/modules/home/: sh.nix
.config/nix/modules/sys/: default.nix
.config/qtile/: _keys.py  flake.nix  groups.py  keys.py  pyproject.toml
.config/qtile/scripts/: startup.sh
.config/qtile/widgets/: __init__.py  custom_widgets.py  widgets.py
.config/rofi/: config.rasi
.config/tmux/: .gitignore  tmux.conf
