[project]
name = "qtile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = []

[tool.pyright]
extraPaths = [
  "/nix/store/4mkk6b8r7i8gawfy3w1gjy775ijcbqj7-python3.12-qtile-0.29.0/lib/python3.12/site-packages"
]
